Cleaned up vmcloak container

--- a/vmcloak/Dockerfile
+++ b/vmcloak/Dockerfile
@@ -2,7 +2,7 @@ FROM harryr/cockatoo:virtualbox5
 MAINTAINER Harry Roberts <harry.roberts@xiphosresearch.co.uk>
 
 # Example:
-# docker run --net=host --privileged -v /dev/vboxdrv:/dev/vboxdrv -v /home/user/OperatingSystems:/mnt/vmcloak/iso -ti 04fe99a285f8 /mnt/vmcloak/makevm.sh derp XP_Pro.iso XXXXX-XXXXX-XXXXX-XXXXX-XXXXX
+# docker run --net=host --privileged -v /dev/vboxdrv:/dev/vboxdrv -v /home/user/OperatingSystems:/mnt/vmcloak/iso -ti harryr/cockatoo:vmcloak /root/makevm.sh derp winxp XP_Pro.iso XXXXX-XXXXX-XXXXX-XXXXX-XXXXX
 
 RUN apt-get -y install mkisofs genisoimage python2.7 python-pip
 
@@ -10,11 +10,10 @@ RUN apt-get clean
 
 RUN pip install vmcloak
 
-RUN mkdir -p /mnt/vmcloak/data /mnt/vmcloak/vm /mnt/vmcloak/iso
-COPY makevm.sh /mnt/vmcloak/makevm.sh
+RUN mkdir -p /mnt/isos/ /root/.vmcloak/
+COPY makevm.sh /root/makevm.sh
 
-VOLUME /mnt/vmcloak/vm
-VOLUME /mnt/vmcloak/data
-VOLUME /mnt/vmcloak/iso
+VOLUME /root/.vmcloak/
+VOLUME /mnt/isos
 
-CMD ["/mnt/vmcloak/makevm.sh"]
+CMD ["/root/makevm.sh"]
