--- a/cuckoo-worker/conf/reporting.conf
+++ b/cuckoo-worker/conf/reporting.conf
@@ -7,14 +7,14 @@
 [jsondump]
 enabled = yes
 indent = 4
-encoding = latin-1
+encoding = utf-8
 calls = yes
 
 [reporthtml]
 enabled = no
 
 [mongodb]
-enabled = yes
+enabled = no
 host = 127.0.0.1
 port = 27017
 db = cuckoo
