--- a/cuckoo/Dockerfile
+++ b/cuckoo/Dockerfile
@@ -20,7 +20,7 @@ ENV SSDEEP ssdeep-2.13
 ENV PIP_NO_CACHE_DIR off
 ENV PIP_DISABLE_PIP_VERSION_CHECK on
 
-RUN apt-get install -y python-pip
+RUN apt-get install -y python-pip 
 RUN pip install --upgrade pip wheel
 
 # Install Cuckoo Sandbox Required Dependencies
@@ -67,7 +67,7 @@ RUN echo "Install ssdeep..." \
   && python setup.py install
 
 RUN echo "Cloning Cuckoo Sandbox..." \
-  && git clone git://github.com/cuckoobox/cuckoo.git /cuckoo \
+  && git clone https://github.com/HarryR/cuckoo.git --branch conf-env --single-branch /cuckoo \
   && groupadd cuckoo \
   && useradd --create-home --home-dir /home/cuckoo -g cuckoo cuckoo \
   && chown -R cuckoo:cuckoo /cuckoo \
@@ -77,20 +77,23 @@ RUN echo "Cloning Cuckoo Sandbox..." \
   && /usr/local/bin/pip install -r requirements.txt \
   && python utils/community.py -waf
 
+# Other stuff...
+RUN apt-get install -y python-psycopg2 ipython
+
 RUN echo "Clean up unnecessary files..." \
   && apt-get purge -y --auto-remove $buildDeps \
   && apt-get clean \
   && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/* /var/lib/mongodb
 
-COPY supervisord.conf /etc/supervisor/conf.d/supervisord.conf
-COPY conf/reporting.conf /cuckoo/conf/reporting.conf
+# COPY supervisord.conf /etc/supervisor/conf.d/supervisord.conf
+# COPY conf/reporting.conf /cuckoo/conf/reporting.conf
 # COPY docker-entrypoint.sh /entrypoint.sh
 
-VOLUME ["/cuckoo/conf"]
+VOLUME ["/cuckoo/conf", "/root/.vmcloak"]
 
-WORKDIR /cuckoo/web
+WORKDIR /cuckoo
 
-EXPOSE 80
+#EXPOSE 80
 
 # ENTRYPOINT ["/entrypoint.sh"]
 
