--- a/cuckoo-worker/conf/cuckoo.conf
+++ b/cuckoo-worker/conf/cuckoo.conf
@@ -2,7 +2,7 @@
 # Enable or disable startup version check. When enabled, Cuckoo will connect
 # to a remote location to verify whether the running version is the latest
 # one available.
-version_check = on
+version_check = off
 
 # If turned on, Cuckoo will delete the original file after its analysis
 # has been completed.
@@ -56,7 +56,7 @@ max_vmstartup_count = 10
 # This tries to avoid failing an analysis because the reports can't be written 
 # due out-of-diskspace errors. Setting this value to 0 disables the check.
 # (Note: this feature is currently not supported under Windows.)
-freespace = 64
+freespace = 1024
 
 # Temporary directory containing the files uploaded through Cuckoo interfaces
 # (api.py and Django web interface).
@@ -116,7 +116,7 @@ port = 2042
 # Force the port chosen above, don't try another one (we can select another
 # port dynamically if we can not bind this one, but that is not an option
 # in some setups)
-force_port = no
+force_port = yes
 
 # Maximum size of uploaded files from VM (screenshots, dropped files, log)
 # The value is expressed in bytes, by default 10Mb.
