--- a/cuckoo-worker/supervisord.conf
+++ b/cuckoo-worker/supervisord.conf
@@ -11,3 +11,11 @@ command=/usr/bin/python /cuckoo/utils/api.py
 autostart=true
 autorestart=true
 priority=10
+
+#
+# [program:cuckoo-web]
+# command=/usr/bin/python /cuckoo/web/manage.py runserver 0.0.0.0:80
+# autostart=true
+# autorestart=true
+# priority=10
+#
