--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "cuckoo/cuckoo"]
-	path = cuckoo/cuckoo
-	url = git@github.com:HarryR/cuckoo.git
+[submodule "src/cuckoo/cuckoo"]
+	path = src/cuckoo/cuckoo
+	url = https://github.com/HarryR/cuckoo.git
