--- a/src/cuckoo-worker/conf/cuckoo.conf
+++ b/src/cuckoo-worker/conf/cuckoo.conf
@@ -143,7 +143,7 @@ sort_pcap = on
 # postgresql://foo:bar@localhost:5432/mydatabase
 # mysql://foo:bar@localhost/mydatabase
 # If empty, default is a SQLite in db/cuckoo.db.
-connection = %(CUCKOO_DB_DSN)s
+connection = %(CUCKOO_WORKER_DSN)s
 
 # Database connection timeout in seconds.
 # If empty, default is set to 60 seconds.
