Starting behemoth via host supervisor works well :D

--- a/src/cuckoo-worker/supervisord.conf
+++ b/src/cuckoo-worker/supervisord.conf
@@ -1,16 +1,19 @@
 [supervisord]
 nodaemon=true
+identifier=cuckoo
 
 [program:cuckoo-daemon]
 command=/usr/bin/python /cuckoo/cuckoo.py
 autostart=true
 autorestart=true
+redirect_stderr=true
 
 [program:cuckoo-api]
 command=/usr/bin/python /cuckoo/utils/api.py
 autostart=true
 autorestart=true
 priority=10
+redirect_stderr=true
 
 #
 # [program:cuckoo-web]
