--- a/supervisord.conf
+++ b/supervisord.conf
@@ -21,16 +21,19 @@ supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
 command=make run-cuckoo-worker
 priority=900
 startsecs=300
+redirect_stderr=true
 
 [program:dist-api]
 command=make run-cuckoo-dist-api
 priority=700
 startsecs=30
+redirect_stderr=true
 
 [program:dist-db]
 command=make run-cuckoo-dist-db
 priority=600
 startsecs=30
+redirect_stderr=true
 
 [group:dist]
 programs=dist-api,dist-db
