--- a/src/cuckoo-dist/Dockerfile
+++ b/src/cuckoo-dist/Dockerfile
@@ -1,8 +1,7 @@
 FROM harryr/cockatoo:cuckoo
 
 COPY settings.py /cuckoo/distributed/settings.py
-COPY supervisord.conf /etc/supervisor/conf.d/cuckoo.conf
 
 EXPOSE 9003
 
-CMD ["/usr/bin/supervisord"]
+CMD ["/usr/bin/python", "/cuckoo/distributed/app.py", "0.0.0.0", "9003"]
