--- a/src/cuckoo-worker/conf/cuckoo.conf
+++ b/src/cuckoo-worker/conf/cuckoo.conf
@@ -142,8 +142,9 @@ sort_pcap = on
 # sqlite:///foo.db
 # postgresql://foo:bar@localhost:5432/mydatabase
 # mysql://foo:bar@localhost/mydatabase
+# %(CUCKOO_WORKER_DSN)s
 # If empty, default is a SQLite in db/cuckoo.db.
-connection = %(CUCKOO_WORKER_DSN)s
+connection = 
 
 # Database connection timeout in seconds.
 # If empty, default is set to 60 seconds.
