--- a/src/cuckoo-worker/supervisord.conf
+++ b/src/cuckoo-worker/supervisord.conf
@@ -7,13 +7,16 @@ command=/usr/bin/python /cuckoo/cuckoo.py
 autostart=true
 autorestart=true
 redirect_stderr=true
+stopwaitsecs=400
 
 [program:cuckoo-api]
-command=/usr/bin/python /cuckoo/utils/api.py
+#command=/usr/bin/python /cuckoo/utils/api.py
+command=/cuckoo-api-wrapper.sh
 autostart=true
 autorestart=true
 priority=10
 redirect_stderr=true
+stopwaitsecs=30
 
 #
 # [program:cuckoo-web]
