--- a/supervisord.conf
+++ b/supervisord.conf
@@ -20,7 +20,8 @@ supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
 [program:worker]
 command=make run-cuckoo-worker
 priority=900
-startsecs=300
+startsecs=60
+stopwaitsecs=400
 redirect_stderr=true
 
 [program:dist-api]
