Added missing components to dist-api

--- a/src/cuckoo-dist/Dockerfile
+++ b/src/cuckoo-dist/Dockerfile
@@ -1,7 +1,8 @@
 FROM harryr/cockatoo:cuckoo
 
 COPY settings.py /cuckoo/distributed/settings.py
+COPY supervisord.conf /etc/supervisor/conf.d/cuckoo.conf
 
 EXPOSE 9003
 
-CMD ["/usr/bin/python", "/cuckoo/distributed/app.py", "0.0.0.0", "9003"]
+CMD ["/usr/bin/supervisord"]
