--- a/supervisord.conf
+++ b/supervisord.conf
@@ -23,21 +23,26 @@ priority=900
 startsecs=60
 stopwaitsecs=400
 redirect_stderr=true
+autorestart=true
+startretries=1000
 
-[program:dist-api]
+[program:api]
 command=make run-cuckoo-dist-api
 priority=700
 startsecs=30
 redirect_stderr=true
+autorestart=true
+startretries=1000
 
-[program:dist-db]
+[program:db]
 command=make run-cuckoo-dist-db
 priority=600
 startsecs=30
 redirect_stderr=true
+autorestart=true
 
 [group:dist]
-programs=dist-api,dist-db
+programs=api,db
 priority=500
 
 [group:cuckoo]
