--- a/src/cuckoo-worker/supervisord.conf
+++ b/src/cuckoo-worker/supervisord.conf
@@ -8,15 +8,23 @@ autostart=true
 autorestart=true
 redirect_stderr=true
 stopwaitsecs=400
+killasgroup=true
+stdout_logfile=/dev/stdout
+stdout_logfile_maxbytes=0
+stdout_logfile_backups=0
 
 [program:cuckoo-api]
-#command=/usr/bin/python /cuckoo/utils/api.py
 command=/cuckoo-api-wrapper.sh
 autostart=true
 autorestart=true
 priority=10
 redirect_stderr=true
+killasgroup=true
+startsecs=10
 stopwaitsecs=30
+stdout_logfile=/dev/stdout
+stdout_logfile_maxbytes=0
+stdout_logfile_backups=0
 
 #
 # [program:cuckoo-web]
