Use new dist-handler instead of individual handler processes, also LICENSE lol

--- a/src/cuckoo-dist/supervisord.conf
+++ b/src/cuckoo-dist/supervisord.conf
@@ -14,6 +14,18 @@ stdout_logfile_maxbytes=0
 stdout_logfile_backups=0
 
 
+[program:dist-handler]
+command=/usr/bin/python /cuckoo/distributed/instance.py dist.handler
+autostart=true
+autorestart=true
+redirect_stderr=true
+stopwaitsecs=20
+killasgroup=true
+stdout_logfile=/dev/stdout
+stdout_logfile_maxbytes=0
+stdout_logfile_backups=0
+
+
 [program:dist-scheduler]
 command=/usr/bin/python /cuckoo/distributed/instance.py dist.scheduler
 autostart=true
