--- a/src/cuckoo-worker/conf/cuckoo.conf
+++ b/src/cuckoo-worker/conf/cuckoo.conf
@@ -108,7 +108,7 @@ auto_rt = yes
 # to contact the host through such address, so make sure it's valid.
 # NOTE: if you set resultserver IP to 0.0.0.0 you have to set the option
 # `resultserver_ip` for all your virtual machines in machinery configuration.
-ip = %(HOSTNAME)s
+ip = %(MYIP)s
 
 # Specify a port number to bind the result server on.
 port = 2042
@@ -129,10 +129,10 @@ upload_max_size = 10485760
 analysis_size_limit = 104857600
 
 # Enable or disable DNS lookups.
-resolve_dns = on
+resolve_dns = off
 
 # Enable PCAP sorting, needed for the connection content view in the web interface.
-sort_pcap = on
+sort_pcap = off
 
 [database]
 # Specify the database connection string.
