--- a/src/cuckoo-worker/conf/cuckoo.conf
+++ b/src/cuckoo-worker/conf/cuckoo.conf
@@ -6,13 +6,13 @@ version_check = off
 
 # If turned on, Cuckoo will delete the original file after its analysis
 # has been completed.
-delete_original = on
+delete_original = off
 
 # If turned on, Cuckoo will delete the copy of the original file in the
 # local binaries repository after the analysis has finished. (On *nix this
 # will also invalidate the file called "binary" in each analysis directory,
 # as this is a symlink.)
-delete_bin_copy = on
+delete_bin_copy = off
 
 # Specify the name of the machinery module to use, this module will
 # define the interaction between Cuckoo and your virtualization software
@@ -45,12 +45,12 @@ max_analysis_count = 0
 # Limit the number of concurrently executing analysis machines.
 # This may be useful on systems with limited resources.
 # Set to 0 to disable any limits.
-max_machines_count = 0
+max_machines_count = %(MAX_VMS)s
 
 # Limit the amount of VMs that are allowed to start in parallel. Generally
 # speaking starting the VMs is one of the more CPU intensive parts of the
 # actual analysis. This option tries to avoid maxing out the CPU completely.
-max_vmstartup_count = 10
+max_vmstartup_count = %(CPU_COUNT)s
 
 # Minimum amount of free space (in MB) available before starting a new task. 
 # This tries to avoid failing an analysis because the reports can't be written 
