VPN support with free cryptostorm

--- a/src/cuckoo-worker/conf/cuckoo.conf
+++ b/src/cuckoo-worker/conf/cuckoo.conf
@@ -6,13 +6,13 @@ version_check = off
 
 # If turned on, Cuckoo will delete the original file after its analysis
 # has been completed.
-delete_original = off
+delete_original = on
 
 # If turned on, Cuckoo will delete the copy of the original file in the
 # local binaries repository after the analysis has finished. (On *nix this
 # will also invalidate the file called "binary" in each analysis directory,
 # as this is a symlink.)
-delete_bin_copy = off
+delete_bin_copy = on
 
 # Specify the name of the machinery module to use, this module will
 # define the interaction between Cuckoo and your virtualization software
@@ -63,7 +63,8 @@ freespace = 1024
 tmppath = /tmp
 
 # Path to the unix socket for running root commands.
-rooter = /tmp/cuckoo-rooter
+rooter = /cuckoo/rooter.sock
+rooter_tmp = /tmp/rooter/
 
 [routing]
 # Default network routing mode; "none", "internet", or "vpn_name".
