--- a/src/cuckoo-worker/conf/vpn.conf
+++ b/src/cuckoo-worker/conf/vpn.conf
@@ -1,7 +1,7 @@
 [vpn]
 # By default we disable VPN support as it requires running utils/rooter.py as
 # root next to cuckoo.py (which should run as regular user).
-enabled = no
+enabled = %(CUCKOO_VPN)s
 
 # Comma-separated list of the available VPNs.
 vpns = cryptostorm
@@ -21,10 +21,10 @@ description = Cryptostorm
 # a hardcoded/persistent tun device by explicitly adding the line "dev tunX"
 # to its configuration (e.g., /etc/openvpn/vpn1.conf) where X in tunX is a
 # unique number between 0 and your lucky number of choice.
-interface = tun0
+interface = tun1
 
 # Routing table name/id for this VPN. If table name is used it *must* be
 # added to /etc/iproute2/rt_tables as "<id> <name>" line (e.g., "201 tun0"). 
 # ID and name must be unique across the system (refer /etc/iproute2/rt_tables
 # for existing names and IDs).
-rt_table = tun0
+rt_table = tun1
