--- a/src/cuckoo-worker/supervisord.conf
+++ b/src/cuckoo-worker/supervisord.conf
@@ -7,6 +7,7 @@ command=/usr/bin/python /cuckoo/cuckoo.py
 autostart=true
 autorestart=true
 redirect_stderr=true
+startsecs=10
 stopwaitsecs=400
 killasgroup=true
 stdout_logfile=/dev/stdout
