--- a/supervisord.conf
+++ b/supervisord.conf
@@ -26,6 +26,15 @@ redirect_stderr=true
 autorestart=true
 startretries=1000
 
+[program:rooter]
+command=make run-rooter
+priority=800
+startsecs=10
+stopwaitsecs=10
+redirect_stderr=true
+autorestart=true
+startretries=1000
+
 [program:api]
 command=make run-cuckoo-dist-api
 priority=700
@@ -46,5 +55,5 @@ programs=api,db
 priority=500
 
 [group:cuckoo]
-programs=worker
+programs=worker,rooter
 priority=800
